fud2/tests/snapshots/tests__test@plan_synth-verilog-to-util-json.snap
---
source: fud2/tests/tests.rs
description: "emit plan: synth-verilog-to-util-json"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
rule mkdir
  command = mkdir -p $out
rule move
  command = mv $in $out
rule copy
  command = cp $in $out
rule copy-utilization
  command = cp out/FutilBuild.runs/impl_1/main_utilization_placed.rpt $out
rule copy-timing
  command = cp out/FutilBuild.runs/impl_1/main_timing_summary_routed.rpt $out
rule copy-area
  command = cp out/hierarchical_utilization_placed.rpt $out
rule vivado
  command = XILINX_LOCAL_USER_DATA=no vivado -mode batch -source synth.tcl > /dev/null
device_xdc = default.xdc
build default.xdc: get-rsrc
build synth.tcl: get-rsrc
rule parse-rpt
  command = synthrep viz -t flamegraph -f $in > $out
rule extract-util-json
  command = synthrep summary -m utilization > $out
rule extract-hierarchy-json
  command = synthrep summary -m hierarchy > $out

build main.sv: copy /input.ext
build device.xdc: copy $device_xdc
build IGNOREME: vivado | main.sv synth.tcl device.xdc
build /output.ext: extract-util-json IGNOREME

default /output.ext
