fud2/tests/snapshots/tests__test@plan_trace-instrumented.snap
---
source: fud2/tests/tests.rs
assertion_line: 66
description: "emit plan: trace-instrumented"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

build sim.log /output.ext: sim-run /input.ext $datadir
  bin = /input.ext
  args = +NOTRACE=0 +OUT=/output.ext

default /output.ext
