fud2/tests/snapshots/tests__test@plan_trace.snap
---
source: fud2/tests/tests.rs
description: "emit plan: trace"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build sim.log /output.ext: sim-run /input.ext $datadir
  bin = /input.ext
  args = +NOTRACE=0 +OUT=/output.ext

default /output.ext
