fud2/tests/snapshots/tests__test@plan_verilator-instrumented.snap
---
source: fud2/tests/tests.rs
assertion_line: 66
description: "emit plan: verilator-instrumented"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

build tb.sv: get-rsrc

verilator = verilator
cycle-limit = 500000000
rule verilator-compile-standalone-tb
  command = $verilator $in tb.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule verilator-compile-custom-tb
  command = $verilator $in tb.sv memories.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule cp
  command = cp $in $out

build verilator-out/Vtoplevel: verilator-compile-standalone-tb /input.ext | tb.sv
  out-dir = verilator-out
build /output.ext: cp verilator-out/Vtoplevel

default /output.ext
