fud2/tests/snapshots/tests__test@plan_verilator.snap
---
source: fud2/tests/tests.rs
description: "emit plan: verilator"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build tb.sv: get-rsrc

verilator = verilator
cycle-limit = 500000000
rule verilator-compile-standalone-tb
  command = $verilator $in tb.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule verilator-compile-custom-tb
  command = $verilator $in tb.sv memories.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule cp
  command = cp $in $out

build verilator-out/Vtoplevel: verilator-compile-standalone-tb /input.ext | tb.sv
  out-dir = verilator-out
build /output.ext: cp verilator-out/Vtoplevel

default /output.ext
