fud2/tests/snapshots/tests__test@plan_vitis-hls-impl.snap
---
source: fud2/tests/tests.rs
description: "emit plan: vitis-hls-impl"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

vitis-hls-top = kernel
build hls.tcl: get-rsrc
rule vitis-hls
  command = vitis_hls -f hls.tcl -tclargs top $vitis-hls-top
rule vitis-hls-impl
  command = vitis_hls -f hls.tcl -tclargs top $vitis-hls-top impl
rule extract-hls-json
  command = synthrep summary -m hls --top $vitis-hls-top > $out
rule extract-hls-impl-json
  command = synthrep summary -m hls-impl --top $vitis-hls-top > $out

build IGNOREME: vitis-hls-impl | /input.ext hls.tcl
build /output.ext: extract-hls-impl-json IGNOREME

default /output.ext
