fud2/tests/snapshots/tests__test@plan_xrt-trace.snap
---
source: fud2/tests/tests.rs
description: "emit plan: xrt-trace"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

vivado-dir = /test/xilinx/vivado
vitis-dir = /test/xilinx/vitis
build gen_xo.tcl: get-rsrc
build get-ports.py: get-rsrc
python = python3
rule copy
  command = cp $in $out
rule gen-xo
  command = $vivado-dir/bin/vivado -mode batch -source gen_xo.tcl -tclargs $out `$python get-ports.py kernel.xml`
  pool = console
xilinx-mode = hw_emu
platform = xilinx_u50_gen3x16_xdma_201920_3
rule compile-xclbin
  command = $vitis-dir/bin/v++ -g -t $xilinx-mode --platform $platform --save-temps --profile.data all:all:all --profile.exec all:all:all -lo $out $in
  pool = console
xml-generator = $calyx-base/yxi/xml/xml_generator.py
rule gen-kernel-xml
  command = $python $xml-generator $in > $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build tb.sv: get-rsrc

rule emconfig
  command = $vitis-dir/bin/emconfigutil --platform $platform
build emconfig.json: emconfig
xrt-dir = /test/xilinx/xrt
rule xclrun
  command = bash -c '
        source $vitis-dir/settings64.sh;
        source $xrt-dir/setup.sh;
        if [ "$xilinx-mode" = "hw_emu" ] || [ "$xilinx-mode" = "sw_emu" ]; then
            export XCL_EMULATION_MODE=$xilinx-mode;
        fi;
        XRT_INI_PATH=$xrt_ini EMCONFIG_PATH=. $python -m fud.xclrun --out $out $in
        '
  pool = console
rule echo
  command = echo $contents > $out
build pre_sim.tcl: echo  | 
  contents = open_vcd\\nlog_vcd *\\n
build post_sim.tcl: echo  | 
  contents = close_vcd\\n

build xrt_trace.ini: get-rsrc
build /output.ext: xclrun /input.ext $sim_data | emconfig.json pre_sim.tcl post_sim.tcl xrt_trace.ini
  xrt_ini = xrt_trace.ini

default /output.ext
